# shooter-game

./: CMakeLists.txt  README.md  instrukcja-sterowania.txt  main.cpp
docs/: controls.txt  sterowanie.txt
resources/: initial_data.json
resources/images/: DefeatBackground.psd  MenuBackground.psd  PauseBackground.psd  PlayStatInfoNotch.psd  Shop-online.psd  Shop.psd
resources/shaders/: blur.frag
resources/sprites/: main_sprite_texture-online.psd  main_sprite_texture.psd  sprites.psd
source/: EnemySpawner.cpp  Game.cpp  Game.h  Menu.h  Princess.cpp  Princess.h  Rocket.cpp  Rocket.h  RocketSpawner.h  new_layout_info.txt
source/SimpleGUI/: Button.cpp  Button.hpp  CheckBox.cpp  CheckBox.hpp  GroupBox.cpp  GroupBox.hpp  ImageBox.cpp  ImageBox.hpp  Label.cpp  Label.hpp  RadioButton.cpp  RadioButton.hpp  SguiObject.cpp  SguiObject.hpp  Switch.cpp  Switch.hpp  TabControl.cpp  TabControl.hpp  common.hpp
source/animations/: Animation.cpp  Animation.h  GotDamageAnimation.cpp  GotDamageAnimation.h
source/enums/: GameState.h
source/environment/: Map.cpp  Map.h  Obstacle.cpp  Obstacle.h  Sound.cpp  Sound.h
source/mechanics/: DeltaTime.cpp  DeltaTime.h
source/mechanics/spawners/: EnemySpawner.cpp  EnemySpawner.h
source/objects/: Armor.cpp  Armor.cpp.autosave  Armor.h  Armor.h.autosave  Bullet.cpp  Bullet.h  Weapon.cpp  Weapon.h
source/objects/entities/: Enemy.cpp  Enemy.h  Ghost.cpp  Ghost.h  Player.cpp  Player.h  Skeleton.cpp  Zombie.cpp  Zombie.h
source/states/: DefeatState.cpp  DefeatState.h  Menu.cpp  Menu.h  MenuState.cpp  MenuState.h  PausePlayState.cpp  PausePlayState.h  Play.cpp  Play.h  PlayPauseState.cpp  PlayPauseState.h  PlayState.cpp  PlayState.h  StartState.cpp  StartState.h  State.cpp  State.h  StateManager.h
source/utils/: AdvancedComputation.cpp  AdvancedComputation.h  Constants.cpp  Constants.h  Data.cpp  Data.h  DeltaTime.cpp  DeltaTime.h  GlobalData.cpp  GlobalData.h  InitialData.cpp  InitialData.h  Random.cpp  Random.h  RectEdges.cpp  RectEdges.h  RectangleEdges.cpp  RectangleEdges.h  Support.cpp  Support.h
source/views/: ShopView.cpp  ShopView.h  StartMenuView.cpp  StartMenuView.h
src/: Game.cpp  Game.h  Game.h.autosave  Princess.cpp  Princess.h  RocketSpawner.cpp
src/enums/: GameState.h
